Circle config renaming

--- a/circle.yml
+++ b/circle.yml
@@ -1,6 +1,9 @@
+test:
+  override:
+    - echo "Nothing to test"
 deployment:
   prod:
     branch: master
     commands:
-      - npm i && gitbook build
+      - gitbook build
       - aws s3 sync _book/ s3://webdocs.red-badger.com/ --delete
