Added script to run test gitbook locally

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Documentation for Red Badger sites",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "gitbook serve" 
   },
   "repository": {
     "type": "git",
